--- a/index.html
+++ b/index.html
@@ -1,310 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Sedifex Blog — Ghana Market & Store Stories</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      :root {
-        --bg: #f9fafb;
-        --surface: #ffffff;
-        --border: #e5e7eb;
-        --text-main: #111827;
-        --text-muted: #6b7280;
-        --accent: #2563eb;
-        --accent-soft: #eff6ff;
-      }
+---
+layout: home
+title: "Sedifex Blog"
+---
 
-      * {
-        box-sizing: border-box;
-      }
-
-      body {
-        margin: 0;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          sans-serif;
-        background: var(--bg);
-        color: var(--text-main);
-      }
-
-      a {
-        color: var(--accent);
-        text-decoration: none;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-
-      .page {
-        max-width: 960px;
-        margin: 0 auto;
-        padding: 24px 16px 40px;
-      }
-
-      header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 24px;
-      }
-
-      .brand {
-        font-size: 14px;
-        letter-spacing: 0.12em;
-        text-transform: uppercase;
-        color: var(--accent);
-        font-weight: 600;
-      }
-
-      .site-title {
-        font-size: 26px;
-        font-weight: 700;
-        margin: 4px 0 0;
-      }
-
-      nav a {
-        margin-left: 16px;
-        font-size: 14px;
-        color: var(--text-muted);
-      }
-
-      .hero {
-        background: linear-gradient(135deg, #111827, #1f2937);
-        border-radius: 16px;
-        padding: 24px 20px;
-        color: #f9fafb;
-        margin-bottom: 28px;
-      }
-
-      .hero h1 {
-        margin: 0 0 8px;
-        font-size: 26px;
-      }
-
-      .hero p {
-        margin: 0 0 16px;
-        font-size: 14px;
-        color: #e5e7eb;
-      }
-
-      .hero-meta {
-        font-size: 12px;
-        color: #9ca3af;
-      }
-
-      .hero-links a {
-        display: inline-block;
-        margin-right: 12px;
-        font-size: 13px;
-      }
-
-      .grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        gap: 16px;
-        margin-bottom: 32px;
-      }
-
-      .card {
-        background: var(--surface);
-        border-radius: 12px;
-        border: 1px solid var(--border);
-        padding: 16px 16px 18px;
-      }
-
-      .card-tag {
-        display: inline-block;
-        padding: 2px 8px;
-        border-radius: 999px;
-        font-size: 11px;
-        background: var(--accent-soft);
-        color: var(--accent);
-        margin-bottom: 8px;
-      }
-
-      .card h2 {
-        font-size: 16px;
-        margin: 0 0 6px;
-      }
-
-      .card p {
-        font-size: 13px;
-        margin: 0 0 10px;
-        color: var(--text-muted);
-      }
-
-      .card-meta {
-        font-size: 11px;
-        color: var(--text-muted);
-      }
-
-      .section-title {
-        font-size: 16px;
-        font-weight: 600;
-        margin: 0 0 10px;
-      }
-
-      footer {
-        border-top: 1px solid var(--border);
-        margin-top: 32px;
-        padding-top: 16px;
-        font-size: 11px;
-        color: var(--text-muted);
-      }
-
-      footer p {
-        margin: 4px 0;
-      }
-
-      @media (max-width: 600px) {
-        header {
-          flex-direction: column;
-          align-items: flex-start;
-          gap: 8px;
-        }
-
-        nav {
-          margin-top: 4px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="page">
-      <header>
-        <div>
-          <div class="brand">Sedifex</div>
-          <div class="site-title">Sedifex Blog</div>
-        </div>
-        <nav>
-          <a href="#market">Ghana market</a>
-          <a href="#stores">Store stories</a>
-          <a href="#playbook">Manager tips</a>
-          <a href="https://www.sedifex.com" target="_blank">App</a>
-        </nav>
-      </header>
-
-      <section class="hero">
-        <h1>Daily insight for Ghanaian shop owners.</h1>
-        <p>
-          Short, practical updates on the Ghana market, stories from Sedifex
-          stores, and simple playbooks to run your shop with more calm and
-          confidence.
-        </p>
-        <div class="hero-links">
-          <a href="#market">📈 Ghana market pulse</a>
-          <a href="#stores">🏪 Sedifex store stories</a>
-          <a href="#playbook">📚 Manager’s playbook</a>
-        </div>
-        <div class="hero-meta">
-          Powered by Sedifex · Your stores listed on
-          <a href="https://stores.sedifex.com" target="_blank"
-            >stores.sedifex.com</a
-          >
-        </div>
-      </section>
-
-      <!-- Ghana Market Pulse -->
-      <section id="market">
-        <h2 class="section-title">Ghana market pulse</h2>
-        <div class="grid">
-          <article class="card">
-            <div class="card-tag">Market</div>
-            <h2>December demand: what small shops should prepare for</h2>
-            <p>
-              Festive spending changes how customers buy rice, oil, drinks and
-              gifts. Here’s how to plan your stock and cash flow for the
-              December rush.
-            </p>
-            <div class="card-meta">5 min read · For mini-marts & provision stores</div>
-          </article>
-
-          <article class="card">
-            <div class="card-tag">Market</div>
-            <h2>Fuel prices & deliveries: when to adjust your prices</h2>
-            <p>
-              Rising transport costs can quietly erase your profits. Learn a
-              simple way to review prices after fuel changes.
-            </p>
-            <div class="card-meta">3 min read · For all retail shops</div>
-          </article>
-        </div>
-      </section>
-
-      <!-- Store Stories -->
-      <section id="stores">
-        <h2 class="section-title">Stories from Sedifex stores</h2>
-        <div class="grid">
-          <article class="card">
-            <div class="card-tag">Store story</div>
-            <h2>How Ama’s mini-mart reduced stockouts by 25%</h2>
-            <p>
-              By closing the day with Sedifex and checking low-stock items each
-              morning, Ama now rarely runs out of her top 20 products.
-            </p>
-            <div class="card-meta">Kasoa · Sedifex POS & inventory</div>
-          </article>
-
-          <article class="card">
-            <div class="card-tag">Store story</div>
-            <h2>This print shop stopped losing deposit payments</h2>
-            <p>
-              A simple habit of entering every job and payment into Sedifex
-              helped a busy print shop avoid mix-ups and disputes.
-            </p>
-            <div class="card-meta">Accra · Print & design shop</div>
-          </article>
-        </div>
-      </section>
-
-      <!-- Manager's Playbook -->
-      <section id="playbook">
-        <h2 class="section-title">Manager’s playbook</h2>
-        <div class="grid">
-          <article class="card">
-            <div class="card-tag">Playbook</div>
-            <h2>10-minute closing checklist for your shop</h2>
-            <p>
-              A short routine you and your staff can follow every evening to
-              keep your cash, stock and records under control.
-            </p>
-            <div class="card-meta">Checklist · Works with Sedifex or any POS</div>
-          </article>
-
-          <article class="card">
-            <div class="card-tag">Playbook</div>
-            <h2>How to read your daily Sedifex report</h2>
-            <p>
-              Learn which 4 numbers to check each morning so you know if
-              yesterday was a good day or a warning sign.
-            </p>
-            <div class="card-meta">Guide · Uses your daily email summary</div>
-          </article>
-        </div>
-      </section>
-
-      <footer>
-        <p>
-          © <span id="year"></span> Sedifex. All rights reserved.
-        </p>
-        <p>
-          Built for shops in Ghana and beyond. Visit
-          <a href="https://www.sedifex.com" target="_blank">www.sedifex.com</a>
-          or explore stores on
-          <a href="https://stores.sedifex.com" target="_blank"
-            >stores.sedifex.com</a
-          >.
-        </p>
-        <p>
-          Address: Kwamisa Street GA 5808547, Awoshie · Powered by GitHub Pages.
-        </p>
-      </footer>
-    </div>
-
-    <script>
-      // Set current year in footer
-      document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
-  </body>
-</html>
