Add evergreen pages for Sedifex site

--- a/default.html
+++ b/default.html
@@ -142,6 +142,8 @@
         <nav>
           <a href="{{ '/' | relative_url }}">Home</a>
           <a href="{{ '/about-sedifex/' | relative_url }}">What is Sedifex?</a>
+          <a href="{{ '/pricing/' | relative_url }}">Pricing</a>
+          <a href="{{ '/contact/' | relative_url }}">Contact</a>
           <a href="https://www.sedifex.com" target="_blank">Sedifex app</a>
         </nav>
       </header>
