--- a/default.html
+++ b/default.html
@@ -4,6 +4,14 @@
     <meta charset="utf-8" />
     <title>{{ page.title }} — {{ site.title }}</title>
     {% assign meta_description = page.description | default: page.excerpt | strip_html | strip_newlines | truncate: 160 | default: site.description %}
+    {% assign social_image = page.og_image | default: page.image | default: site.og_image %}
+    {% if social_image %}
+    {% assign social_image_url = social_image | absolute_url %}
+    {% assign social_image_alt = page.og_image_alt | default: page.image_alt | default: site.og_image_alt %}
+    {% unless social_image_alt %}
+    {% assign social_image_alt = page.title | default: site.title | append: ' — ' | append: site.title %}
+    {% endunless %}
+    {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="{{ meta_description }}" />
     {% if page.author or site.author %}
@@ -17,7 +25,17 @@
     <meta property="og:type" content="{% if page.layout == 'post' or page.collection == 'posts' %}article{% else %}website{% endif %}" />
     <meta property="og:url" content="{{ canonical_url }}" />
     <meta property="og:site_name" content="{{ site.title }}" />
+    {% if social_image_url %}
+    <meta property="og:image" content="{{ social_image_url }}" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="{{ social_image_alt }}" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image" content="{{ social_image_url }}" />
+    <meta name="twitter:image:alt" content="{{ social_image_alt }}" />
+    {% else %}
     <meta name="twitter:card" content="summary" />
+    {% endif %}
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ meta_description }}" />
     <script type="application/ld+json">
@@ -37,6 +55,15 @@
           "@type": "Organization",
           "name": {{ site.title | jsonify }}
         },
+        {% if social_image_url %}
+        "image": {
+          "@type": "ImageObject",
+          "url": {{ social_image_url | jsonify }},
+          "width": 1200,
+          "height": 630{% if social_image_alt %},
+          "description": {{ social_image_alt | jsonify }}{% endif %}
+        },
+        {% endif %}
         "mainEntityOfPage": {
           "@type": "WebPage",
           "@id": {{ canonical_url | jsonify }}
@@ -46,6 +73,14 @@
         "name": {{ site.title | jsonify }},
         "description": {{ meta_description | jsonify }},
         "url": {{ canonical_url | jsonify }}
+        "url": {{ canonical_url | jsonify }}{% if social_image_url %},
+        "image": {
+          "@type": "ImageObject",
+          "url": {{ social_image_url | jsonify }},
+          "width": 1200,
+          "height": 630{% if social_image_alt %},
+          "description": {{ social_image_alt | jsonify }}{% endif %}
+        }{% endif %}
         {% endif %}
       }
     </script>
@@ -71,91 +106,3 @@
         color: var(--text);
         min-height: 100vh;
       }
-      a { color: var(--primary); text-decoration: none; transition: color 180ms ease, transform 180ms ease; }
-      a:hover { color: var(--primary-strong); transform: translateY(-1px); }
-      .page {
-        max-width: 1040px; margin: 0 auto; padding: 32px 18px 56px;
-      }
-      .glass-card {
-        background: linear-gradient(145deg, rgba(255, 255, 255, 0.97), rgba(255, 255, 255, 0.93));
-        border: 1px solid rgba(255, 255, 255, 0.6);
-        border-radius: 18px;
-        box-shadow: var(--glow), 0 12px 45px rgba(15, 23, 42, 0.2);
-        backdrop-filter: blur(14px);
-      }
-      header {
-        display: flex; justify-content: space-between; align-items: center;
-        padding: 18px 20px; margin-bottom: 26px; position: sticky; top: 0; z-index: 10;
-        background: linear-gradient(180deg, rgba(11, 23, 39, 0.92), rgba(11, 23, 39, 0.7));
-        border: 1px solid var(--border);
-        border-radius: 16px;
-        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.28);
-        backdrop-filter: blur(10px);
-      }
-      .brand { font-size: 13px; letter-spacing: .16em; text-transform: uppercase;
-        color: #cde0ff; font-weight: 700; }
-      .site-title { font-size: 24px; font-weight: 700; margin: 4px 0 0; color: #f8fbff; }
-      nav a {
-        margin-left: 10px; font-size: 14px; color: #dbe7ff; padding: 8px 12px;
-        border-radius: 12px; border: 1px solid rgba(255,255,255,0.08);
-        background: rgba(255,255,255,0.04); transition: all 180ms ease;
-      }
-      nav a:hover { background: rgba(255,255,255,0.08); border-color: rgba(255,255,255,0.16); }
-      .content-shell { padding: 0 6px; }
-      footer {
-        margin-top: 36px; padding-top: 18px;
-        font-size: 12px; color: #cbd5f5; text-align: center;
-      }
-      footer p { margin: 6px 0; }
-      .cta-button {
-        display: inline-flex; align-items: center; gap: 10px; padding: 12px 18px;
-        border-radius: 14px; background: linear-gradient(135deg, var(--primary), var(--primary-strong));
-        color: #fff; font-weight: 600; box-shadow: 0 10px 30px rgba(59, 110, 219, 0.35);
-      }
-      .pill {
-        display: inline-flex; align-items: center; gap: 6px; padding: 8px 12px;
-        border-radius: 999px; background: rgba(91, 141, 239, 0.12);
-        color: var(--primary-strong); font-weight: 600; font-size: 13px;
-      }
-      .meta {
-        font-size: 12px; color: var(--muted); text-transform: uppercase;
-        letter-spacing: 0.08em; font-weight: 600;
-      }
-      .card-title { margin: 0 0 8px; font-size: 22px; line-height: 1.3; color: var(--text); }
-      .card-description { color: #1f2937; font-size: 15px; margin: 0; line-height: 1.6; }
-      .muted { color: var(--muted); }
-      @media (max-width: 720px) {
-        header { flex-direction: column; align-items: flex-start; gap: 10px; position: static; }
-        nav { width: 100%; display: flex; gap: 8px; padding-top: 4px; }
-        nav a { flex: 1; text-align: center; margin-left: 0; }
-        .page { padding: 22px 14px 40px; }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="page">
-      <header>
-        <div>
-          <div class="brand">Sedifex</div>
-          <div class="site-title">{{ site.title }}</div>
-        </div>
-        <nav>
-          <a href="{{ '/' | relative_url }}">Home</a>
-          <a href="{{ '/about-sedifex/' | relative_url }}">What is Sedifex?</a>
-          <a href="{{ '/pricing/' | relative_url }}">Pricing</a>
-          <a href="{{ '/contact/' | relative_url }}">Contact</a>
-          <a href="https://www.sedifex.com" target="_blank">Sedifex app</a>
-        </nav>
-      </header>
-
-      <div class="content-shell">
-        {{ content }}
-
-        <footer>
-          <p>© {{ site.time | date: "%Y" }} Sedifex · Kwamisa Street GA 5808547, Awoshie · Ghana</p>
-          <p>Updates on the Ghana market and stories from Sedifex stores.</p>
-        </footer>
-      </div>
-    </div>
-  </body>
-</html>
